--- a/filmes/templates/filmes/cadastro_filmes.html
+++ b/filmes/templates/filmes/cadastro_filmes.html
@@ -1,14 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cadastro</title>
-</head>
-<body>
-<form action="." method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Cadastrar">
-</form>
-</body>
+<!doctype html>
+{% load static %}
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Cadastro de filme</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+      <link rel="stylesheet" href="{% static 'filmes/main.css' %}">
+      <link rel="stylesheet" href="{% static 'filmes/responsive.css' %}">
+      <link rel="stylesheet" href="{% static 'filmes/nav2.css' %}">
+      <style>
+          label {
+              color: #6c757d;
+          }
+      </style>
+
+
+  </head>
+  <body>
+  {% include 'partials/nav.html' %}
+  <br>
+    <div class="conteiner">
+        <div class="row align-items-center">
+            <div class="col-md-10 mx-auto col-lg-5">
+                 <form class="p-4 p-md-5 border rounded-3 bg-light" method="POST">
+                    {% csrf_token %}
+                    <div class="form-floating mb-3">
+                        <div class="form-floating">
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Filme</label>
+                                {{ form.nome }}
+                              </div>
+                              <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Ano</label>
+                                {{ form.ano_lancamento }}
+                              </div>
+                              <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Classificação</label>
+                                {{ form.idade }}
+                              </div>
+                              <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Duração</label>
+                                {{ form.tempo }}
+                              </div>
+                              <div class="mb-3">
+                                <label for="exampleFormControlTextarea1" class="form-label">Sinopse</label>
+                                  {{form.sinopse}}
+                              </div>
+                              <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Imagem Pequena</label>
+                                {{ form.imagem_pequena }}
+                              </div>
+                              <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Imagem Grande</label>
+                                {{ form.imagem_grande }}
+                              </div>
+                              <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Trailer</label>
+                                {{ form.trailer }}
+                              </div>
+                              <br>
+                              <div class="form-floating">
+                                  {{ form.categoria }}
+                                  <label for="floatingSelect" class="text-dark">Selecione a categoria</label>
+                              </div>
+                              <p></p>
+                              <br>
+                              <div class="d-grid gap-2">
+                              <button type="submit" class="btn btn-danger">Carregar Trailer</button>
+                            </div>
+                 </form>
+            </div>
+        </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  </body>
 </html>
